Tela Login e Configurar

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="apple-touch-icon" sizes="57x57" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/sap/bc/ui5_ui5/zsgmr/img/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/sap/bc/ui5_ui5/sap/zsgmr/img/favicon/favicon-16x16.png">
     <title>SGMR Mobile</title>
     <style>
         html, body, body > div, #container, #container-uiarea {
@@ -12,19 +25,16 @@
     </style>
     <script
         id="sap-ui-bootstrap"
-        src="resources/sap-ui-core.js"
+        src="https://sapui5.hana.ondemand.com/1.130.8/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
             "com.pontual.sgmr": "./"
         }'
+        data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-async="true"
         data-sap-ui-frameOptions="trusted"
     ></script>
-    <script id="locate-reuse-libs" src="./utils/locate-reuse-libs.js"
-        data-sap-ui-manifest-uri="./manifest.json"
-        data-sap-ui-componentName="com.pontual.sgmr">
-    </script> 
 </head>
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
